Changed logic for create question endpoint with adding of AnswerRequest